# geos-cli

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build.yml
include/GeosCli/: AreaCommand.hpp  BoundaryCommand.hpp  BufferCommand.hpp  CentroidCommand.hpp  Command.hpp  Commands.hpp  ConcaveHullCommand.hpp  ContainsCommand.hpp  ConvexHullCommand.hpp  CoordinatesCommand.hpp  CountCommand.hpp  CountPointsCommand.hpp  CoveredByCommand.hpp  CoversCommand.hpp  CrossesCommand.hpp  DelaunayTriangulationCommand.hpp  DifferenceCommand.hpp  DimensionCommand.hpp  DisjointCommand.hpp  DistanceCommand.hpp  EnvelopeCommand.hpp  GeosCli.hpp  GetCommand.hpp  InteriorPointCommand.hpp  IntersectionCommand.hpp  IntersectsCommand.hpp  IsEmptyCommand.hpp  IsRectCommand.hpp  IsSimpleCommand.hpp  IsValidCommand.hpp  IsWithinDistanceCommand.hpp  LengthCommand.hpp  ListCommand.hpp  MakeValidCommand.hpp  OffsetCurveCommand.hpp  OverlapsCommand.hpp  RelateCommand.hpp  SymDifferenceCommand.hpp  TouchesCommand.hpp  TypeCommand.hpp  (+3 more)
src/: App.cpp  AreaCommand.cpp  BoundaryCommand.cpp  BufferCommand.cpp  CentroidCommand.cpp  Command.cpp  Commands.cpp  ConcaveHullCommand.cpp  ContainsCommand.cpp  ConvexHullCommand.cpp  CoordinatesCommand.cpp  CountCommand.cpp  CountPointsCommand.cpp  CoveredByCommand.cpp  CoversCommand.cpp  CrossesCommand.cpp  DelaunayTriangulationCommand.cpp  DifferenceCommand.cpp  DimensionCommand.cpp  DisjointCommand.cpp  DistanceCommand.cpp  EnvelopeCommand.cpp  GetCommand.cpp  InteriorPointCommand.cpp  IntersectionCommand.cpp  IntersectsCommand.cpp  IsEmptyCommand.cpp  IsRectCommand.cpp  IsSimpleCommand.cpp  IsValidCommand.cpp  IsWithinDistanceCommand.cpp  LengthCommand.cpp  ListCommand.cpp  MakeValidCommand.cpp  OffsetCurveCommand.cpp  OverlapsCommand.cpp  RelateCommand.cpp  SymDifferenceCommand.cpp  TouchesCommand.cpp  TypeCommand.cpp  (+3 more)
test/: AreaCommandTest.cpp  BoundaryCommandTest.cpp  BufferCommandTest.cpp  CMakeLists.txt  CentroidCommandTest.cpp  ConcaveHullCommandTest.cpp  ContainsCommandTest.cpp  ConvexHullCommandTest.cpp  CoordinatesCommandTest.cpp  CountCommandTest.cpp  CountPointsCommandTest.cpp  CoveredByCommandTest.cpp  CoversCommandTest.cpp  CrossesCommandTest.cpp  DelaunayTriangulationCommandTest.cpp  DifferenceCommandTest.cpp  DimensionCommandTest.cpp  DisjointCommandTest.cpp  DistanceCommandTest.cpp  EnvelopeCommandTest.cpp  GetCommandTest.cpp  InteriorPointCommandTest.cpp  IntersectionCommandTest.cpp  IntersectsCommandTest.cpp  IsEmptyCommandTest.cpp  IsRectCommandTest.cpp  IsSimpleCommandTest.cpp  IsValidCommandTest.cpp  IsWithinDistanceCommandTest.cpp  LengthCommandTest.cpp  ListCommandTest.cpp  MakeValidCommandTest.cpp  OffsetCurveCommandTest.cpp  OverlapsCommandTest.cpp  RelateCommandTest.cpp  SymDifferenceCommandTest.cpp  TouchesCommandTest.cpp  TypeCommandTest.cpp  UnionCommandTest.cpp  VoronoiDiagramCommandTest.cpp  (+1 more)
