ADD_EXECUTABLE(tests 
    AreaCommandTest.cpp
    BoundaryCommandTest.cpp
    BufferCommandTest.cpp
    CentroidCommandTest.cpp
    ContainsCommandTest.cpp
    ConcaveHullCommandTest.cpp
    ConvexHullCommandTest.cpp
    CoordinatesCommandTest.cpp
    CountCommandTest.cpp
    CountPointsCommandTest.cpp
    CoveredByCommandTest.cpp
    CoversCommandTest.cpp
    CrossesCommandTest.cpp
    DelaunayTriangulationCommandTest.cpp
    DifferenceCommandTest.cpp
    DimensionCommandTest.cpp
    DisjointCommandTest.cpp
    DistanceCommandTest.cpp
    EnvelopeCommandTest.cpp
    GetCommandTest.cpp
    InteriorPointCommandTest.cpp
    IntersectionCommandTest.cpp
    IntersectsCommandTest.cpp
    IsEmptyCommandTest.cpp
    IsRectCommandTest.cpp
    IsSimpleCommandTest.cpp
    IsValidCommandTest.cpp
    IsWithinDistanceCommandTest.cpp
    LengthCommandTest.cpp
    ListCommandTest.cpp
    MakeValidCommandTest.cpp
    OffsetCurveCommandTest.cpp
    OverlapsCommandTest.cpp
    RelateCommandTest.cpp
    SymDifferenceCommandTest.cpp
    TouchesCommandTest.cpp
    TypeCommandTest.cpp
    UnionCommandTest.cpp
    VoronoiDiagramCommandTest.cpp
    WithinCommandTest.cpp
)
target_link_libraries(tests 
    geos-cmds
    GEOS::GEOS
    CLI11::CLI11
    GTest::GTest
)

ADD_TEST(NAME "GeosCliTests" COMMAND "tests")
